--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "dva-core": "^2.0.2",
     "expo": "~36.0.0",
+    "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
@@ -17,7 +19,10 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.0.10"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2",
+    "react-redux": "^7.1.3"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
