集成dva、react navigation、native base

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
+    "baseUrl": "src",
     "skipLibCheck": true,
     "resolveJsonModule": true
   }
