--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
-    "react-redux": "^7.1.3"
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
